...

        <TextView
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:id="@+id/tv_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"


            android:textColor="@color/colorPrimaryLight"
...
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ellipsize="end"
            android:maxLines="1"
...
