<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arnab.android.bakingapp.Fragment.StepsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

</FrameLayout>
